profilelist1exp/unpackaged/objects/Headcount__c.object
<CustomObject>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Corporate Events</fullName>
                </value>
                <value>
                    <fullName>Global Business</fullName>
                </value>
                <value>
                    <fullName>Int&apos;l</fullName>
                </value>
                <value>
                    <fullName>Large Business</fullName>
                </value>
                <value>
                    <fullName>Medium Business</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Client Peripherals</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Displays</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Enterprise</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Imaging</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Operations</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Software</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>WWP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracting_Region__c</fullName>
        <label>Contracting Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All Countries</fullName>
                </value>
                <value>
                    <fullName>ANDEAN</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>NOLA</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Panama</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detailed_Job_Description__c</fullName>
        <label>Detailed Job Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Badge_Number__c</fullName>
        <label>Employee Badge Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Cost_Center__c</fullName>
        <description>Employee Cost Center value with standard 4-4-6 format</description>
        <label>Employee Cost Center</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headcount_Location__c</fullName>
        <label>Headcount Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Peripherals</fullName>
                </value>
                <value>
                    <fullName>Displays</fullName>
                </value>
                <value>
                    <fullName>Enterprise Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Candidate_Approval__c</fullName>
        <label>Latest Candidate Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12Q1</fullName>
                </value>
                <value>
                    <fullName>FY12Q2</fullName>
                </value>
                <value>
                    <fullName>FY12Q3</fullName>
                </value>
                <value>
                    <fullName>FY12Q4</fullName>
                </value>
                <value>
                    <fullName>FY13Q1</fullName>
                </value>
                <value>
                    <fullName>FY13Q2</fullName>
                </value>
                <value>
                    <fullName>FY13Q3</fullName>
                </value>
                <value>
                    <fullName>FY13Q4</fullName>
                </value>
                <value>
                    <fullName>FY14Q1</fullName>
                </value>
                <value>
                    <fullName>FY14Q2</fullName>
                </value>
                <value>
                    <fullName>FY14Q3</fullName>
                </value>
                <value>
                    <fullName>FY14Q4</fullName>
                </value>
                <value>
                    <fullName>FY15Q1</fullName>
                </value>
                <value>
                    <fullName>FY15Q2</fullName>
                </value>
                <value>
                    <fullName>FY15Q3</fullName>
                </value>
                <value>
                    <fullName>FY15Q4</fullName>
                </value>
                <value>
                    <fullName>FY16Q1</fullName>
                </value>
                <value>
                    <fullName>FY16Q2</fullName>
                </value>
                <value>
                    <fullName>FY16Q3</fullName>
                </value>
                <value>
                    <fullName>FY16Q4</fullName>
                </value>
                <value>
                    <fullName>FY17Q1</fullName>
                </value>
                <value>
                    <fullName>FY17Q2</fullName>
                </value>
                <value>
                    <fullName>FY17Q3</fullName>
                </value>
                <value>
                    <fullName>FY17Q4</fullName>
                </value>
                <value>
                    <fullName>FY18Q1</fullName>
                </value>
                <value>
                    <fullName>FY18Q2</fullName>
                </value>
                <value>
                    <fullName>FY18Q3</fullName>
                </value>
                <value>
                    <fullName>FY18Q4</fullName>
                </value>
                <value>
                    <fullName>FY19Q1</fullName>
                </value>
                <value>
                    <fullName>FY19Q2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Role_Approval__c</fullName>
        <label>Latest Role Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12Q1</fullName>
                </value>
                <value>
                    <fullName>FY12Q2</fullName>
                </value>
                <value>
                    <fullName>FY12Q3</fullName>
                </value>
                <value>
                    <fullName>FY12Q4</fullName>
                </value>
                <value>
                    <fullName>FY13Q1</fullName>
                </value>
                <value>
                    <fullName>FY13Q2</fullName>
                </value>
                <value>
                    <fullName>FY13Q3</fullName>
                </value>
                <value>
                    <fullName>FY13Q4</fullName>
                </value>
                <value>
                    <fullName>FY14Q1</fullName>
                </value>
                <value>
                    <fullName>FY14Q2</fullName>
                </value>
                <value>
                    <fullName>FY14Q3</fullName>
                </value>
                <value>
                    <fullName>FY14Q4</fullName>
                </value>
                <value>
                    <fullName>FY15Q1</fullName>
                </value>
                <value>
                    <fullName>FY15Q2</fullName>
                </value>
                <value>
                    <fullName>FY15Q3</fullName>
                </value>
                <value>
                    <fullName>FY15Q4</fullName>
                </value>
                <value>
                    <fullName>FY16Q1</fullName>
                </value>
                <value>
                    <fullName>FY16Q2</fullName>
                </value>
                <value>
                    <fullName>FY16Q3</fullName>
                </value>
                <value>
                    <fullName>FY16Q4</fullName>
                </value>
                <value>
                    <fullName>FY17Q1</fullName>
                </value>
                <value>
                    <fullName>FY17Q2</fullName>
                </value>
                <value>
                    <fullName>FY17Q3</fullName>
                </value>
                <value>
                    <fullName>FY17Q4</fullName>
                </value>
                <value>
                    <fullName>FY18Q1</fullName>
                </value>
                <value>
                    <fullName>FY18Q2</fullName>
                </value>
                <value>
                    <fullName>FY18Q3</fullName>
                </value>
                <value>
                    <fullName>FY18Q4</fullName>
                </value>
                <value>
                    <fullName>FY19Q1</fullName>
                </value>
                <value>
                    <fullName>FY19Q2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager&apos;s Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Headcount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_Structure__c</fullName>
        <label>Position Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dedicated</fullName>
                </value>
                <value>
                    <fullName>Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Price__c</fullName>
        <label>Rate Card Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>UK-I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Vendor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Vendor #1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Vendor__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sub Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Headcount</relationshipLabel>
        <relationshipName>Headcount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Vendor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Vendor #2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Vendor__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sub Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Headcount (Sub Vendor #2)</relationshipLabel>
        <relationshipName>Headcount1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Vendor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Vendor #3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Vendor__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sub Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Headcount (Sub Vendor #3)</relationshipLabel>
        <relationshipName>Headcount2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Headcount</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HCID-{0000}</displayFormat>
        <label>HCID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Headcount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Employee_Cost_Center_Formatting</fullName>
        <active>true</active>
        <description>Employee Cost Center value with standard 4-4-6 format</description>
        <errorConditionFormula>NOT(REGEX(Employee_Cost_Center__c, &quot;[0-9]{4}-[0-9]{4}-[0-9]{6}&quot;))</errorConditionFormula>
        <errorDisplayField>Employee_Cost_Center__c</errorDisplayField>
        <errorMessage>Employee Cost Center must be in 9999-9999-999999 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubVender_Should_Not_Match</fullName>
        <active>true</active>
        <errorConditionFormula>IF( OR((AND( Sub_Vendor_1__c != NULL, Sub_Vendor_2__c != NULL, Sub_Vendor_1__c == Sub_Vendor_2__c)), ( AND( Sub_Vendor_1__c != NULL, Sub_Vendor_3__c != NULL, Sub_Vendor_1__c == Sub_Vendor_3__c)), ( AND(Sub_Vendor_1__c != NULL, Sub_Vendor_4__c != NULL, Sub_Vendor_1__c == Sub_Vendor_4__c)), ( AND(Sub_Vendor_1__c != NULL, Sub_Vendor_5__c != NULL, Sub_Vendor_1__c == Sub_Vendor_5__c))), 
true , 
IF(OR((AND(Sub_Vendor_2__c != NULL,Sub_Vendor_3__c != NULL, Sub_Vendor_2__c == Sub_Vendor_3__c)), (AND(Sub_Vendor_2__c != NULL, Sub_Vendor_4__c != NULL, Sub_Vendor_2__c == Sub_Vendor_4__c)),(AND( Sub_Vendor_2__c != NULL, Sub_Vendor_5__c != NULL, Sub_Vendor_2__c == Sub_Vendor_5__c))), 
true, 
IF(OR(( AND(Sub_Vendor_3__c != NULL,Sub_Vendor_4__c != NULL, Sub_Vendor_3__c == Sub_Vendor_4__c)),( AND(Sub_Vendor_3__c != NULL, Sub_Vendor_5__c != NULL, Sub_Vendor_3__c == Sub_Vendor_5__c))), 
true, 
IF( OR((AND(Sub_Vendor_4__c != NULL, Sub_Vendor_5__c != NULL, Sub_Vendor_4__c == Sub_Vendor_5__c))),true,false))))</errorConditionFormula>
        <errorMessage>No duplicate sub vendors allowed</errorMessage>
    </validationRules>
</CustomObject>